<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="28dp"
    android:paddingLeft="@dimen/base_margin_horizontal"
    android:paddingRight="@dimen/base_margin_horizontal"
    android:paddingTop="10dp"
    tools:context="com.tungnui.dalatlaptop.ux.login.LoginActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_registration_name_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#000"
                tools:text="Nguyễn Ngọc Hoàng Vũ"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_registration_email_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <AutoCompleteTextView
                android:id="@+id/login_registration_email_text_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@+id/login_registration_password"
                android:nextFocusForward="@+id/login_registration_password"
                android:nextFocusRight="@+id/login_registration_password"
                android:singleLine="true"
                android:textColor="#000"
                tools:text="hoangvunn76@gmail.com"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_registration_password_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@android:drawable/ic_menu_view"
                android:drawableRight="@android:drawable/ic_menu_view"
                android:hint="@string/Password"
                android:textColor="#fff"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                tools:text="123456"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_registration_confirm"
            style="@style/buttonPrimaryStyle"
            android:layout_width="290dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Register" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Khi đăng kí là bạn đã chấp nhận điều khiển điều khoản sử dụng"
        android:textAlignment="center"/>
    </LinearLayout>


