<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:animateLayoutChanges="true"
    android:weightSum="1">

    <include
        android:id="@+id/toolbarTop"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/cart_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Your_cart_is_empty"
            android:src="@drawable/cart_empty" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/Your_cart_is_empty" />

        <TextView
            android:id="@+id/cart_empty_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/START_SHOPPING"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cart_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarTop"
        android:orientation="vertical"
        android:layout_weight="1"
        android:scrollbars="vertical">

        <View
            android:id="@+id/lineView"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/toolbar_boarder" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/page_bg_dim"
            android:paddingStart="13dp"
            android:paddingEnd="@dimen/activity_horizontal_margin">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvCartList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cart_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/item_grey"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10px"
            android:paddingBottom="4dp">

            <com.tungnui.abccomputer.view.RobotoTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="center_vertical"
                android:text="Thành tiền"
                android:textColor="@color/product_name_color"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_weight="0.6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cart_footer_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    tools:text="9995 USD" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/including_VAT"
                    android:textColor="@color/textSecondary"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnOrder"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_main"
            android:gravity="center"
            android:text="TIẾN HÀNH ĐẶT HÀNG"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <include
        layout="@layout/view_common_loader"
        android:background="@color/page_bg_dim"
        android:visibility="gone"/>
</LinearLayout>
